# src/modules/auth/dto/login.dto.ts
@@ -1,0 +1,12 @@
+// src/modules/auth/dto/login.dto.ts
+
+import { IsEmail, IsString, MinLength } from 'class-validator';
+
+export class LoginDto {
+  @IsEmail()
+  email!: string;
+
+  @IsString()
+  @MinLength(8)
+  password!: string;
+}
